complete Section 1 and 2

--- a/index.html
+++ b/index.html
@@ -21,19 +21,65 @@
           </ul>
         </nav>
         <nav class="mobile">
-          <span>
-            <img id="logo" src="file:///C:/cygwin64/home/Laurent/Colmar%20Academy/css/capstone_colmar_assets/images/ic-logo.svg"/>
-          </span>
           <ul>
-            <li><a href="#"><img src="file:///C:/cygwin64/home/Laurent/Colmar%20Academy/css/capstone_colmar_assets/images/ic-on-campus.svg"></a></li>
-            <li><a href="#"><img src="file:///C:/cygwin64/home/Laurent/Colmar%20Academy/css/capstone_colmar_assets/images/ic-online.svg"></a></li>
-            <li><a href="#"><img src="file:///C:/cygwin64/home/Laurent/Colmar%20Academy/css/capstone_colmar_assets/images/ic-login.svg"></a></li>
+            <li><a href="#"><img id="logomob" src="file:///C:/cygwin64/home/Laurent/Colmar%20Academy/css/capstone_colmar_assets/images/ic-logo.svg"/></a></li>
+            <li><a href="#"><img src="file:///C:/cygwin64/home/Laurent/Colmar%20Academy/css/capstone_colmar_assets/images/ic-on-campus.svg"/></a></li>
+            <li><a href="#"><img src="file:///C:/cygwin64/home/Laurent/Colmar%20Academy/css/capstone_colmar_assets/images/ic-online.svg"/></a></li>
+            <li><a href="#"><img src="file:///C:/cygwin64/home/Laurent/Colmar%20Academy/css/capstone_colmar_assets/images/ic-login.svg"/></a></li>
           </ul>
         </nav>
       </div>
     </header>
 <!-- Section 1 -->
+    <div class="main">
+      <div class="block one">
+        <img id="img" src="file:///C:/cygwin64/home/Laurent/Colmar%20Academy/css/capstone_colmar_assets/images/banner.jpg"/>
+      </div>
+      <div class="block two">
+        <h1>Learn Something New Everyday</h1>
+        <h2>Avec Matin Malin, consommez et faites du bien !</h2>
+        <a href="#"><button id="btn">Start Here</button></a>
+      </div>
+    </div>
 <!-- Section 2 -->
+    <div class="main second">
+      <div class="block three">
+        <img id="img" src="file:///C:/cygwin64/home/Laurent/Colmar%20Academy/css/capstone_colmar_assets/images/information-main.jpg"/>
+        <div id="text">
+        <span>
+          <h1>It doesn't hurt to keep practicing</h1>
+          <p>"En mangeant sain et équilibré tous les matin, en plus de respecter votre corps et votre santé, vous respectez la nature et adoptez une consommation raisonnée. Rien de mieux pour démarrer la journée !"</p>
+          <p id="para">Laurent Prevot, founder & CEO at MatinMalin.fr</p>
+        </span>
+        </div>
+      </div>
+      <div class="column-small">
+        <div class="img-column">
+          <img id="img-info" src="file:///C:/cygwin64/home/Laurent/Colmar%20Academy/css/capstone_colmar_assets/images/information-orientation.jpg"/>
+          <span id="text">
+            <p id="p1">yo</p>
+            <p id="p2">yo</p>
+            <p id="p3">yo</p>
+          </span>
+        </div>
+        <div class="img-column">
+          <img id="img-info" src="file:///C:/cygwin64/home/Laurent/Colmar%20Academy/css/capstone_colmar_assets/images/information-campus.jpg"/>
+          <span id="text">
+            <p id="p1">yo</p>
+            <p id="p2">yo</p>
+            <p id="p3">yo</p>
+          </span>
+        </div>
+        <div class="img-column">
+          <img id="img-info" src="file:///C:/cygwin64/home/Laurent/Colmar%20Academy/css/capstone_colmar_assets/images/information-guest-lecture.jpg"/>
+          <span id="text">
+            <p id="p1">yo</p>
+            <p id="p2">yo</p>
+            <p id="p3">yo</p>
+          </span>
+        </div>
+      </div>
+    </div>
 <!-- Section 3 -->
 <!-- Video section -->
 <!-- Footer -->
